objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Initial_Source__c</fullName>
        <description>Vertiba OnDemand, 8/1/2014, SR-00001980, Initial Source</description>
        <inlineHelpText>Initial Source</inlineHelpText>
        <label>Initial Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adwords</fullName>
                </value>
                <value>
                    <fullName>Al Esmail</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>American Wealth</fullName>
                </value>
                <value>
                    <fullName>Amerifi</fullName>
                </value>
                <value>
                    <fullName>Anderson Workshop</fullName>
                </value>
                <value>
                    <fullName>Association of Private Lenders</fullName>
                </value>
                <value>
                    <fullName>Ben Mehr Original Client</fullName>
                </value>
                <value>
                    <fullName>Better Trades/Payback Time</fullName>
                </value>
                <value>
                    <fullName>Binder Review</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Bob Bluhm</fullName>
                </value>
                <value>
                    <fullName>BOSS</fullName>
                </value>
                <value>
                    <fullName>Cherry Creek</fullName>
                </value>
                <value>
                    <fullName>Clint&apos;s Blog</fullName>
                </value>
                <value>
                    <fullName>Crystal Han</fullName>
                </value>
                <value>
                    <fullName>Dani Johnson</fullName>
                </value>
                <value>
                    <fullName>Dan Noble</fullName>
                </value>
                <value>
                    <fullName>Dave McShane</fullName>
                </value>
                <value>
                    <fullName>Don Pendleton</fullName>
                </value>
                <value>
                    <fullName>Elan Edwards</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Internet Referral</fullName>
                </value>
                <value>
                    <fullName>Invest Four More</fullName>
                </value>
                <value>
                    <fullName>Jay King Original Client</fullName>
                </value>
                <value>
                    <fullName>Jerry Royse</fullName>
                </value>
                <value>
                    <fullName>Joe Gnapp</fullName>
                </value>
                <value>
                    <fullName>JT Marlin Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investment_Income__c</fullName>
        <label>Investment Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Investments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Investments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Lead__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check to set the date of a sale 45 days in the future on conversion. Uncheck to default the close date to the end of the current fiscal quarter.</inlineHelpText>
        <label>Is Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Owner__c</fullName>
        <description>Owner Of Record</description>
        <formula>OwnerId = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LI_AdForm_Response_ID__c</fullName>
        <description>LinkedIn Map - AdForm Response ID</description>
        <label>AdForm Response ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Advertiser_Account__c</fullName>
        <description>LinkedIn Map - Adverstiser Account</description>
        <label>Advertiser Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Lead_Industry__c</fullName>
        <inlineHelpText>LinkedIn lead&apos;s occupation industry</inlineHelpText>
        <label>Lead Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Lead_Type__c</fullName>
        <description>LinkedIn Map - Lead Type</description>
        <label>Lead Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name_Hidden_for_Conversion__c</fullName>
        <label>Last Name (Hidden for Conversion)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Google_Analytics_Campaign_Lead__c</fullName>
        <label>Latest Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Google_Analytics_Content_Lead__c</fullName>
        <label>Latest Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Google_Analytics_Medium_Lead__c</fullName>
        <label>Latest Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Google_Analytics_Source_Lead__c</fullName>
        <label>Latest Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Google_Analytics_Term_Lead__c</fullName>
        <label>Latest Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadCount__c</fullName>
        <label>Lead Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Campaign_Type__c</fullName>
        <formula>TEXT(Original_Campaign_Source__r.Type)</formula>
        <label>Lead Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_By_Hidden_For_Conversion__c</fullName>
        <formula>CreatedBy.FirstName &amp; &quot; &quot;&amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created By (Hidden for Conversion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Hidden_For_Conversion__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Created Date (Hidden for Conversion</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Distribution_Number_Override__c</fullName>
        <description>This number will override the Lead Distribution number</description>
        <label>Lead Distribution Number Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Distribution_Number__c</fullName>
        <formula>if( Lead_Distribution_Number_Override__c!=0,Lead_Distribution_Number_Override__c ,MOD(VALUE(Leads_Number__c),8)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Distribution Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>Lead number for round robin system - dgass created</description>
        <displayFormat>{0}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Active__c</fullName>
        <formula>Owner:User.IsActive</formula>
        <label>Lead Owner Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Hidden_For_Conversion__c</fullName>
        <formula>BLANKVALUE(Owner:Queue.QueueName, Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner (Hidden for Conversion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Reminder__c</fullName>
        <description>This field is updated by the workflow &quot;Set Reminder for Lead Owners&quot;.</description>
        <label>Lead Owner Reminder</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Text__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Title__c</fullName>
        <formula>Owner:User.Title</formula>
        <label>Lead Owner Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Priority__c</fullName>
        <defaultValue>2</defaultValue>
        <description>Priority field to direct leads into the appropriate buckets.</description>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Sales_Rep_Hidden_For_Conversion__c</fullName>
        <formula>Sales_Rep__r.First_Name__c &amp; &quot; &quot; &amp; Sales_Rep__r.Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Sales Rep (Hidden for Conversion)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>The number that shows qualification of leads and contacts to Sales readiness.</description>
        <label>Lead Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Latest__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source_Type__c</fullName>
        <label>Sale Source Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Seminar</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>AP Kit Purchase - Seminar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Lead Source...</fullName>
                </value>
                <value>
                    <fullName>Adwords</fullName>
                </value>
                <value>
                    <fullName>Al Esmail</fullName>
                </value>
                <value>
                    <fullName>Alpine</fullName>
                </value>
                <value>
                    <fullName>American Wealth</fullName>
                </value>
                <value>
                    <fullName>Amerifi</fullName>
                </value>
                <value>
                    <fullName>Association of Private Lenders</fullName>
                </value>
                <value>
                    <fullName>Ben Mehr Original Client</fullName>
                </value>
                <value>
                    <fullName>Better Trades/Payback Time</fullName>
                </value>
                <value>
                    <fullName>Binder Review</fullName>
                </value>
                <value>
                    <fullName>Bing</fullName>
                </value>
                <value>
                    <fullName>Bob Bluhm</fullName>
                </value>
                <value>
                    <fullName>Chaikin Analytics</fullName>
                </value>
                <value>
                    <fullName>Clint&apos;s Blog</fullName>
                </value>
                <value>
                    <fullName>Crystal Han</fullName>
                </value>
                <value>
                    <fullName>Dani Johnson</fullName>
                </value>
                <value>
                    <fullName>Dan Noble</fullName>
                </value>
                <value>
                    <fullName>Dave Lindahl</fullName>
                </value>
                <value>
                    <fullName>Dave McShane</fullName>
                </value>
                <value>
                    <fullName>Don Pendleton</fullName>
                </value>
                <value>
                    <fullName>Elan Edwards</fullName>
                </value>
                <value>
                    <fullName>elitetrainingap.com</fullName>
                </value>
                <value>
                    <fullName>Existing Client</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Internet Referral</fullName>
                </value>
                <value>
                    <fullName>Invest Four More</fullName>
                </value>
                <value>
                    <fullName>Jay King Original Client</fullName>
                </value>
                <value>
                    <fullName>Jerry Royse</fullName>
                </value>
                <value>
                    <fullName>Joe Gnapp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <formula>IF(ISBLANK(ConvertedDate),TODAY(),ConvertedDate) - DATEVALUE(CreatedDate)</formula>
        <label>Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leads_Number__c</fullName>
        <description>SR-2242 - Round Robin Auto-Assignment.  -so</description>
        <displayFormat>{0}</displayFormat>
        <label>Leads Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Amount__c</fullName>
        <description>Enter the amount of life insurance</description>
        <label>Life Insurance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Life_Insurance_Type__c</fullName>
        <description>Select the type of life insurance this person has</description>
        <label>Life Insurance Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>VUL</fullName>
                </value>
                <value>
                    <fullName>Whole Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Life_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this person have life insurance</description>
        <label>Life Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <formula>&quot;https://andersonadvisors.my.salesforce.com/&quot;+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_for_Communities__c</fullName>
        <formula>&quot;https://platinum.force.com/aba/s/detail/&quot;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link for Communities</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQL_Date__c</fullName>
        <label>MQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mailing_Allowed__c</fullName>
        <label>Mailing Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Lead_Source__c</fullName>
        <description>2018 Lead Source being used</description>
        <inlineHelpText>lead source for 2018 - general category of where the client came from. For specifics look at campaign.</inlineHelpText>
        <label>Main Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Main_Lead_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>New_C_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New C Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Charitable_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Charitable Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_LLC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New LLC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_LP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New LP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Living_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Living Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_S_Corp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New S Corp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if client would like to receive our newsletter. Uncheck to remove client from email list</description>
        <inlineHelpText>Check if client would like to receive our newsletter. Uncheck to remove client from email list</inlineHelpText>
        <label>Newsletter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_from_Lead_Call__c</fullName>
        <label>Notes from Lead Call</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <description>Enter the number of children</description>
        <label>Number of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees_Hidden__c</fullName>
        <label>Number of Employees (Hidden )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Rentals__c</fullName>
        <description>How many properties does this person own</description>
        <label>Number of Rentals</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OCS_Parent_Campaign__c</fullName>
        <formula>Original_Campaign_Source__r.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCS Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Campaign__c</fullName>
        <label>Online Campaign</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_in_to_SMS_reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in to SMS reminders-Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source_Mirror__c</fullName>
        <formula>Original_Campaign_Source__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Campaign Source Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source_Name__c</fullName>
        <formula>Original_Campaign_Source__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Campaign Source Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Original Campaign Source)</relationshipLabel>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_E_Mail__c</fullName>
        <label>Other E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Owner_Calendly_Link__c</fullName>
        <formula>Owner:User.Calendly_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Calendly Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partners__c</fullName>
        <inlineHelpText>For CSR to ask if the prospect has partners involved in the decision making of the business.</inlineHelpText>
        <label>Partners</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Dummy__c</fullName>
        <label>Primary Campaign Dummy</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Mirror__c</fullName>
        <formula>Primary_Campaign__r.Parent_Campaign__c</formula>
        <label>Primary Campaign Mirror</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>To track Affiliate Name listed in Campaigns.</inlineHelpText>
        <label>Primary Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Real Estate Investor</fullName>
                </value>
                <value>
                    <fullName>Small Business Owner</fullName>
                </value>
                <value>
                    <fullName>Trader</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Estate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Estate Investing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recycled_Type__c</fullName>
        <description>Traffics New Lead/NC1 leads to the Recycle and the rest to Hubspot.</description>
        <label>Recycled Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recycle</fullName>
                </value>
                <value>
                    <fullName>Hubspot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rental_Real_Estate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this person own rental real estate</description>
        <label>Rental Real Estate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_User__c</fullName>
        <formula>IF(

$User.Id = Owner:User.Id ||
/* $User.FirstName+$User.LastName = Owner:User.FirstName+Owner:User.LastName || */
If( CONTAINS( Owner:User.Email, &quot;+commtest@andersonadvisors.com&quot;),
If((Owner:User.FirstName + SUBSTITUTE( Owner:User.LastName , &quot; (Community Test)&quot;, &quot;&quot;) )= ($User.FirstName + $User.LastName ),True,False),If((Owner:User.FirstName+ Owner:User.LastName)=($User.FirstName + SUBSTITUTE( $User.LastName , &quot; (Community Test)&quot;, &quot;&quot;) ),True,false)) ,

1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report User</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retirement_Account_Types__c</fullName>
        <description>Select the type of accounts this person holds for retirement</description>
        <label>Retirement Account Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401k / 403B</fullName>
                </value>
                <value>
                    <fullName>Defined Benefit</fullName>
                </value>
                <value>
                    <fullName>IRA / Sep IRA</fullName>
                </value>
                <value>
                    <fullName>Roth IRA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Round_Robin_ID__c</fullName>
        <formula>1 +MOD(VALUE( Leads_Number__c ), 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Date__c</fullName>
        <inlineHelpText>Date/Time the lead became a Sales Qualified Lead (SQL)</inlineHelpText>
        <label>SQL Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sale_Amount__c</fullName>
        <label>Sale Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Text__c</fullName>
        <formula>Sales_Rep__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Rep (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Sales_Rep__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheduled_By_Modified_Date_Time__c</fullName>
        <description>To track the date/time of the change done to the Scheduled By field</description>
        <inlineHelpText>Tracking scheduled by field</inlineHelpText>
        <label>Scheduled By Modified Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Item__c</fullName>
        <label>Service Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_Item__c</fullName>
        <label>Source of Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <description>Speaker for Vertucci events</description>
        <label>Vertucci Speaker</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>